--- a/q/273956.html
+++ b/q/273956.html
@@ -26,23 +26,72 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>039</td><td>R</td><td>240706T163029Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273968#273968">pajonk</a></td></tr>
-<tr d-ix="1"><td>044</td><td>Desmos</td><td>240707T012010Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273974#273974">Aiden Ch</a></td></tr>
-<tr d-ix="2"><td>023</td><td>Wolfram Language Mathematica</td><td>240706T223148Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273973#273973">Greg Mar</a></td></tr>
-<tr d-ix="3"><td>060</td><td>Google Sheets</td><td>240706T204015Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273971#273971">z..</a></td></tr>
-<tr d-ix="4"><td>031</td><td>Octave with Image Package</td><td>240706T155203Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273967#273967">Luis Men</a></td></tr>
-<tr d-ix="5"><td>047</td><td>Arturo</td><td>240706T193809Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273970#273970">chunes</a></td></tr>
-<tr d-ix="6"><td>058</td><td>Python 3</td><td>240706T181911Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273969#273969">Mukundan</a></td></tr>
-<tr d-ix="7"><td>003</td><td>Jelly</td><td>240706T142512Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273965#273965">Jonathan</a></td></tr>
-<tr d-ix="8"><td>008</td><td>Japt</td><td>240706T121748Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273962#273962">Shaggy</a></td></tr>
-<tr d-ix="9"><td>030</td><td>APL+WIN</td><td>240706T125528Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273964#273964">Graham</a></td></tr>
-<tr d-ix="10"><td>013</td><td>Uiua SBCS</td><td>240706T113354Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273961#273961">chunes</a></td></tr>
-<tr d-ix="11"><td>003</td><td>Jelly</td><td>240706T111628Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273960#273960">lyxal</a></td></tr>
-<tr d-ix="12"><td>024</td><td>Factor</td><td>240706T103142Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273959#273959">chunes</a></td></tr>
-<tr d-ix="13"><td>067</td><td>JavaScript Node.js</td><td>240706T095318Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273957#273957">l4m2</a></td></tr>
-<tr d-ix="14"><td>004</td><td>Vyxal</td><td>240706T100546Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273958#273958">emanresu</a></td></tr>
+<tr d-ix="0"><td>043</td><td>Charcoal</td><td>240707T205545Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273989#273989">Neil</a></td></tr>
+<tr d-ix="1"><td>039</td><td>R</td><td>240706T163029Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273968#273968">pajonk</a></td></tr>
+<tr d-ix="2"><td>044</td><td>Desmos</td><td>240707T012010Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273974#273974">Aiden Ch</a></td></tr>
+<tr d-ix="3"><td>023</td><td>Wolfram Language Mathematica</td><td>240706T223148Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273973#273973">Greg Mar</a></td></tr>
+<tr d-ix="4"><td>060</td><td>Google Sheets</td><td>240706T204015Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273971#273971">z..</a></td></tr>
+<tr d-ix="5"><td>031</td><td>Octave with Image Package</td><td>240706T155203Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273967#273967">Luis Men</a></td></tr>
+<tr d-ix="6"><td>047</td><td>Arturo</td><td>240706T193809Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273970#273970">chunes</a></td></tr>
+<tr d-ix="7"><td>058</td><td>Python 3</td><td>240706T181911Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273969#273969">Mukundan</a></td></tr>
+<tr d-ix="8"><td>003</td><td>Jelly</td><td>240706T142512Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273965#273965">Jonathan</a></td></tr>
+<tr d-ix="9"><td>008</td><td>Japt</td><td>240706T121748Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273962#273962">Shaggy</a></td></tr>
+<tr d-ix="10"><td>030</td><td>APL+WIN</td><td>240706T125528Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273964#273964">Graham</a></td></tr>
+<tr d-ix="11"><td>013</td><td>Uiua SBCS</td><td>240706T113354Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273961#273961">chunes</a></td></tr>
+<tr d-ix="12"><td>003</td><td>Jelly</td><td>240706T111628Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273960#273960">lyxal</a></td></tr>
+<tr d-ix="13"><td>024</td><td>Factor</td><td>240706T103142Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273959#273959">chunes</a></td></tr>
+<tr d-ix="14"><td>067</td><td>JavaScript Node.js</td><td>240706T095318Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273957#273957">l4m2</a></td></tr>
+<tr d-ix="15"><td>004</td><td>Vyxal</td><td>240706T100546Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273958#273958">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>45</s> 39 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 43 bytes</h1>
+<pre><code>ＮθＦＮ⊞υＮＦＥ…·θＬυ✂υκι¹«Ｗ›⊗Ｌ⁻ι⟦⌈ι⟧θ≔⁻ι⟦⌈ι⟧ι⟦Ｉ⌈ι
+</code></pre>
+<p><a href="https://tio.run/##dY5LawJBEITP7q/oYw@M4BMFT2IgBLJB4lE8jOu422R21p2HCsHfPrYgqAcvTVP1VXUXlXJFo0xKX/YQw0@st9phK2bZvnGAz6IQsIy@wijhVb6zuTowX5jo6ah/lS01thK@tS0Dh4SQsDJU6Fv@TwJJ6Auu/M86p4qMBvx0WgUu/Gji1ugd3pM52eiR8XWuzlTHGklsxK2u5fjceyrtG4iv8HOdpSMbcL1QPuDDZn@WXVIaQr8HQxjDFAYwgglvA56j1D2aKw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes <code>K</code> as the first input and <code>N</code> as the second input. Explanation: This was tricky without resorting to <code>eval</code> hacks to invoke external sort or median functions.</p>
+<pre><code>ＮθＦＮ⊞υＮ
+</code></pre>
+<p>Input <code>K</code>, <code>N</code> and the input array.</p>
+<pre><code>ＦＥ…·θＬυ✂υκι¹«
+</code></pre>
+<p>Loop over all of the slices of the input array of length <code>K</code>.</p>
+<pre><code>Ｗ›⊗Ｌ⁻ι⟦⌈ι⟧θ
+</code></pre>
+<p>While removing the highest remaining element from the slice would still leave the median in the remaining elements...</p>
+<pre><code>≔⁻ι⟦⌈ι⟧ι
+</code></pre>
+<p>... remove the highest remaining element.</p>
+<pre><code>⟦Ｉ⌈ι
+</code></pre>
+<p>Output the median, which is now the highest remaining element.</p>
+<p>The above implementation is probably <code>O(NK²)</code>. 65 bytes for a more efficient <code>O(NK)</code> version:</p>
+<pre><code>ＮθＦＮ⊞υＮ≔⟦⟧ζ≔⟦⟧εＦυ«ＦΦζ›κι⊞ε⊟ζ⊞ζιＷε⊞ζ⊟ε¿⁼Ｌζθ«≔⌕ζ§υⅉδ⟦Ｉ§ζ÷θ²⟧≔Φζ⁻λδζ
+</code></pre>
+<p><a href="https://tio.run/##VZBBTwMhEIXP7K@Y45BgYrc1mvTUqDVN1OzVND3QLu2SIttdoBpMfzsC7Rp7ITNvvnnw2DS837RchbDQB2ff3eda9NjRabFte8D/IqVQOdOgY3AtT4uZMXKncbli4K9bMTg5Cj8FyeVcKhsXPYOXXvBU7hlIOvgLBlV7QJ@MSVZ8Gsfmq5FKAIoL6M@gyKDcAj53jiuDr0LvbBxTBh3N15LLi@ZS12ltZhe6Ft8pykcMEME6eZCql9ri8pEbiwPjU1z7JI@yFtgxKCO/yvSf6RDnTWpnUCU3ev4JcipOIYxhdAtjuIMHKGEC97Eq4zkJN0f1Cw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes <code>K</code> as the first input and <code>N</code> as the second input. Explanation:</p>
+<pre><code>ＮθＦＮ⊞υＮ
+</code></pre>
+<p>Input <code>K</code>, <code>N</code> and the input array.</p>
+<pre><code>≔⟦⟧ζ≔⟦⟧ε
+</code></pre>
+<p>Start with an empty sorted window and an empty temporary array.</p>
+<pre><code>Ｆυ«
+</code></pre>
+<p>Loop over the input array.</p>
+<pre><code>ＦΦζ›κι⊞ε⊟ζ⊞ζιＷε⊞ζ⊟ε
+</code></pre>
+<p>Insert the current element into the sorted position in the current window in <code>O(K)</code> time.</p>
+<pre><code>¿⁼Ｌζθ«
+</code></pre>
+<p>If the sorted window has length <code>K</code>, then...</p>
+<pre><code>≔⌕ζ§υⅉδ
+</code></pre>
+<p>Find the index of the element of the window to remove before the next loop.</p>
+<pre><code>⟦Ｉ§ζ÷θ²⟧
+</code></pre>
+<p>Output the middle element of the array.</p>
+<pre><code>≔Φζ⁻λδζ
+</code></pre>
+<p>Remove the element that's about to drop out of the window.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>45</s> 39 bytes</h1>
 <p><em>Edit: -6 bytes thanks to <a href="https://codegolf.stackexchange.com/users/95126/dominic-van-essen">@Dominic van Essen</a>.</em></p>
 <pre class="lang-r prettyprint-override"><code>\(x,N,K)Map(\(i)median(x[1:K+i]),K:N-K)
 </code></pre>
@@ -54,23 +103,23 @@
 <p><a href="https://ato.pxeger.com/run?1=m72waMGiNNulpSVpuhbrq_LzrayK8nNyclNTMhPzIKI3TdM0kjWMdRRMdRQsdBSMdBRMdBTMwVwjMMNEU8dYU0HZVMFUwQQITcHQBKJ5wQIIDQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>(Doesn't use the input <code>N</code>)</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://desmos.com/calculator" rel="nofollow noreferrer">Desmos</a>, 44 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://desmos.com/calculator" rel="nofollow noreferrer">Desmos</a>, 44 bytes</h1>
 <pre><code>f(L,N,K)=[L[i+1...i+K].medianfori=[0...N-K]]
 </code></pre>
 <p><a href="https://www.desmos.com/calculator/gvrl3nwevb" rel="nofollow noreferrer">Try It On Desmos!</a></p>
 <p><a href="https://www.desmos.com/calculator/n6j0w6qhva" rel="nofollow noreferrer">Try It On Desmos! - Prettified</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 23 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 23 bytes</h1>
 <pre><code>Median/@##~Partition~1&amp;
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b73zc1JTMxT99BWbkuILGoJLMkMz@vzlDtf0BRZl5JtEJatEK1sY6pjoWOkY6JjjmQZQQkTWp1FIwVYmP/AwA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a> Unnamed function expecting two arguments in the format <code>[{3,5,8,2,4,7,5,2,7,4},3]</code>. <code>##~Partition~1</code> is the same as <code>Partition[#1,#2,1]</code>, which creates the array of length-<code>#2</code> sublists of <code>#1</code>.</p>
 </div>
-<div id="pu3" class="pu"><h1>Google Sheets, 60 bytes</h1>
+<div id="pu4" class="pu"><h1>Google Sheets, 60 bytes</h1>
 <pre class="lang-cpp prettyprint-override"><code>=MAP(SEQUENCE(B1-B2+1),LAMBDA(i,MEDIAN(OFFSET(A4,i-1,,B2))))
 </code></pre>
 <p><a href="https://i.sstatic.net/XI1vr4Ic.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/XI1vr4Ic.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.gnu.org/software/octave/" rel="nofollow noreferrer">Octave</a> with Image Package, 31 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.gnu.org/software/octave/" rel="nofollow noreferrer">Octave</a> with Image Package, 31 bytes</h1>
 
 <pre class="lang-matlab prettyprint-override"><code>@(x,k)median(im2col(x,[1 k]),1)
 </code></pre>
@@ -84,13 +133,13 @@
 </code></pre>
 <p><code>median(...,1)</code> computes the median along the first dimension, that is, vertically.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 47 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 47 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>$[a,k]-&gt;map 0..-size a k'i-&gt;median a\[i..i+k-1]
 </code></pre>
 <p><a href="https://i.sstatic.net/TMTZ5yjJ.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/TMTZ5yjJ.png" alt="enter image description here" /></a></p>
 <p>Needs modern Arturo so <code>median</code> isn't bugged. So no online link.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 58 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 58 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda n,x,k:[sorted(x[i:i+k])[k//2]for i in range(n-k+1)]
 </code></pre>
@@ -103,7 +152,7 @@
 </code></pre>
 <p><a href="https://tio.run/##ZY9PawMhEMXv/RSDJyVu0u4fGhYSyKVQ6KGQo/WwJW4rblWMhe2n346apIc6IMN7v3Ge/id@OtssI@zgbZmGr/fTADM3vTi7ENWJzkL3emUkE2azqeXoAmjQFsJgPxSdlKUzq8zqgckleZO2KtnOo3PP@jvAo63noGaPO5K/PvtJR0qg2gNhmRhC4GDQR/Rq86tZ9EjNjUVBJEUzuAVC@TLJZObKwn8cyn9cBt13RHCkJURZ4kOaE@Tp8PySkrwejkciRUZ36Q3JL6HRrPYk/48tDXSwhRpaeMSuxrvl0KSPdlgtVle6Xw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 4 </s> 3 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 4 </s> 3 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ṡÆṁ
 </code></pre>
 <p>A dyadic Link that accepts the list of orderable numbers on the left and the infix length on the right and yields a list of numbers.</p>
@@ -114,7 +163,7 @@
  Æṁ - median (vectorises)
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 8 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 8 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ãV ËÍgVz
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=41Ygy81nVno&amp;input=WzMgNSA4IDIgNCA3IDUgMiA3IDRdCjM" rel="nofollow noreferrer">Try it</a></p>
@@ -126,13 +175,13 @@
       Vz     :    V floor divided by 2
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h1>APL+WIN, 30 bytes</h1>
+<div id="pu10" class="pu"><h1>APL+WIN, 30 bytes</h1>
 <p>Prompts for vector of numbers followed by k</p>
 <pre><code>(⌈.5×k)⌷¨(⊂¨⍒¨i)⌷¨i←(k←⎕),/v←⎕
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tv8ajng4908PTszUf9Ww/tELjUVfToRWPeicdWpEJEckEqtXIBhJAjZo6@mUQ1n@gZq7/aVzGCqYKFgpGCiYK5kCWEZA04TLm4gIA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 13 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 13 bytes</h1>
 <pre><code>⊡⌊÷2⊸⧻⍉≡⊏⊸≡⍏◫
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_1__RiDihpAg4oqh4oyKw7cy4oq44qe74o2J4omh4oqP4oq44omh4o2P4perCgpGIDMgWzMgNSA4IDIgNCA3IDUgMiA3IDRdCg==" rel="nofollow noreferrer">Try it!</a></p>
@@ -143,7 +192,7 @@
 ⊡⌊÷2⊸⧻         # ‎⁤get the middle row
 </code></pre>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 3 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, 3 bytes</h1>
 <pre><code>ṡÆṁ
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///hzoWH2x7ubPz//3@0sY6pjoWOkY6JjjmQZQQkTWL/GwMA" rel="noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -157,12 +206,12 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a>, 24 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://factorcode.org/" rel="noreferrer">Factor</a>, 24 bytes</h1>
 <pre><code>[ clump [ median ] map ]
 </code></pre>
-<p><a href="https://tio.run/##DcwxDsIwEAXRPqf4J0iRBBHBARANDaKKUqzMEixsx1mvC4RyduNm9Kp5kdFVyuN@vV1OWGTN0YYFibfMwXCCJ323SUltUmsSorDqN4oNig9LYIdz0/zQ44ARHQYcq7raATv6MsG47CMmeH5aCpjrMmIuhpxDW/4" rel="nofollow noreferrer" title="Factor – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##DcwxDsIwEAXRPqf4J0iRBBHBARANDaKKUqzMEixsx1mvC4RyduNm9Kp5kdFVyuN@vV1OWGTN0YYFibfMwXCCJ323SUltUmsSorDqN4oNig9LYIdz0/zQ44ARHQYcq7raATv6MsG47CMmeH5aCpjrMmIuhpxDW/4" rel="noreferrer" title="Factor – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 67 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 67 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;k=&gt;g=n=&gt;n&lt;k?[]:[...g(n-1),x.slice(n-k,n).sort((p,q)=&gt;p-q)[k&gt;&gt;1]]
 </code></pre>
@@ -175,7 +224,7 @@
 <p><a href="https://tio.run/##HcfRCsIgFADQX/HxXrxKbYsi0r6gLxh7EHOxFHVTYn9vsLdzvuZnit2WXEVMb9dm1Xalo9K7nIOpL5PBKs25f5ye43TfZQmLdeDJ84iypK0CZFpR6SxWHKPW54m8EhGbTbGk4GRIH5hh7IldiN2IdcQGYtej3YFhQugR2x8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p><a href="https://tio.run/##HcdLCsIwEADQq2Q5A9NgP6JIE/EQrkIWpaalJkwkKVpPH6W7957De8hjWl5rxfHhyqTKprRXelasNPf@auzFSCln4KpG2mQOy@j@8cQoc0wroPFa19aWMXKOwckQZ5iA3UfcF17b5pbS8AXTkjiSOJNoSHQkTnubHZ1FhBahPiCWHw" rel="nofollow noreferrer">Both functions can reduce 10 bytes if input as <code>Uint32Array</code></a></p>
 </div>
-<div id="pu14" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 4 bytes</h1>
+<div id="pu15" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 4 bytes</h1>
 <pre><code>lv∆ṁ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJsduKIhuG5gSIsIiIsIjNcblszLDUsOCwyLDQsNyw1LDIsNyw0XSJd" rel="nofollow noreferrer">Try it Online!</a></p>
