--- a/q/273990.html
+++ b/q/273990.html
@@ -26,10 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
-<tr d-ix="1"><td>099</td><td>JavaScript ES10</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
+<tr d-ix="0"><td>009</td><td>MATL</td><td>240707T222154Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273993#273993">Luis Men</a></td></tr>
+<tr d-ix="1"><td>012</td><td>Charcoal</td><td>240707T221329Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273992#273992">Neil</a></td></tr>
+<tr d-ix="2"><td>099</td><td>JavaScript ES10</td><td>240707T213846Z</td><td><a href="https://codegolf.stackexchange.com/questions/273990/is-this-a-hadamard-matrix/273991#273991">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 12 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 9 bytes</h1>
+<pre><code>tY*gttY*=
+</code></pre>
+<p>Inputs a matrix. Outputs a <a href="https://codegolf.stackexchange.com/a/95057/36398">truthy/falsy</a> result. Code footer includes test for truthiness/falsihood.</p>
+<p><a href="https://tio.run/##y00syfn/vyRSK70ESNj@t1cvKSotyahU56pVT0vMKa5U/x@tYKgAQ9YgStcQQlpDhXXhHF2YZCwA" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##y00syfmf8L8kUiu9BEjY/rdXLykqLcmoVOeqVU9LzCkGMmJdQv5HKxgqwJA1iNI1hJDWUGFdOEcXJhnLFQ1VDxYBclG0wZgQExVwyYH1xQIA" rel="nofollow noreferrer">verify all test cases</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 12 bytes</h1>
 <pre><code>⊙θ⊙θ∧⁻κμΣ×ιλ
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjetAooy80o0HPMqNQp1FOBUioZvZl5psUa2jkKupo5CcGmuRkhmbmqxRqaOQo4mGFgvKU5KLoaaszxaSbcsRyn2pkN0dLShjgIUxepwKSgA-bpgvi6cD-Yg8XWhSmJjYyHmAQA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Outputs an inverted Charcoal boolean, i.e. <code>-</code> if not Hadamard, nothing if Hadamard, Explanation:</p>
@@ -48,7 +55,7 @@
                 Implicitly print
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES10), 99 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES10), 99 bytes</h1>
 <p>Returns <em>false</em> for Hadamard or <em>true</em> for non-Hadamard.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>m=&gt;(n=m.length,D=m=&gt;+m||m.reduce((s,[v],i)=&gt;v*D(m.flatMap(([,...r])=&gt;i--?[r]:[]))-s,0))(m)&lt;n**(n/2)
